# GenoADME

./: .gitignore  CLAUDE.md  LICENSE  README.md  pyproject.toml
data/eqtl/: README.md
data/genotype/: README.md  holdout500_ids.txt  slco1b1_rs4149056_holdout.tsv
data/literature/: nat2_isoniazid_studies.tsv  slco1b1_pravastatin_studies.tsv
data/pharmgkb/: README.md
docs/: architecture.md  commit-discipline.md  holdout-seed.md  limitations.md  reporting-standards.md  scientific-integrity.md  tier-changes.md  v0.3-meta-analysis.md  v0.4-nat2-isoniazid-protocol.md  validation-tiers.md
reports/: README.md  audit-log.jsonl  headline-metrics-20260429.json  headline-metrics-20260501.json  headline-metrics-20260503.json  headline-metrics-20260508.json  headline-metrics-20260509.json  validation-tier1-20260429.md  validation-tier1-20260501.md  validation-tier1-20260503.md  validation-tier1-20260508.md  validation-tier1-20260509.md
src/genoadme/: __init__.py  _constants.py  audit.py  errors.py  predict.py  validate.py
src/genoadme/pgx/: __init__.py  eqtl.py  genotype.py  mapping.py  phenotype.py
tests/unit/: test_audit.py  test_constants.py  test_errors.py  test_genotype_holdout.py  test_phenotype_caller.py  test_predict_pk_signature.py  test_validate_stubs.py
