[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "genoadme"
version = "0.1.0"
description = "Genotype-conditional ADME prediction — pharmacogenomic extension of Sisyphus"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [{ name = "Jae Min Yoon", email = "jaemin6013@gmail.com" }]

# Sisyphus pin: Sisyphus issue #8 closing commit on origin/main. This
# state includes PR #22 (OATP1B1/ECM reconciliation, closes #12/#13/#14)
# + PR #25 (pravastatin SMILES connectivity fix) + PR #28 (digoxin
# SMILES fix) — i.e., the calibration that the Sisyphus #8 closing
# comment's diagnostic was based on. Pinning here makes the GenoADME
# Tier 1 numbers strictly comparable to that diagnostic.
#
# The previous pin (aef6f8e4a240cb1c18700ada155e50e76514ff4e — feat/
# prodrug-activation-v2 HEAD at v0.1.0 skeleton time) is no longer
# reachable from origin/main and is preserved only in the audit log
# entries dated 2026-04-29 and 2026-05-01.
#
# Any change to this pin moves Tier 1 numbers and therefore requires
# a `metric-change:` commit per docs/commit-discipline.md §3 (or a
# `tier-change:` commit if the spec is also re-anchored).
dependencies = [
    "sisyphus @ git+https://github.com/jam-sudo/Sisyphus.git@9f1680d083d9fd64704c54877d75daf5ce5c170d",
    "numpy>=1.24",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "ruff>=0.4",
]

[project.scripts]
genoadme = "genoadme.cli:main"

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "W", "UP"]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "slow: tests that touch the full validation pipeline (run with --run-slow)",
]

[tool.hatch.build.targets.wheel]
packages = ["src/genoadme"]
